--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -9,7 +9,9 @@
     "@testing-library/user-event": "^12.1.10",
     "apexcharts": "^3.28.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.38.1",
