--- a/packages/web-client/package.json
+++ b/packages/web-client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
+    "@rematch/core": "^2.1.0",
+    "@rematch/select": "^3.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -15,6 +17,7 @@
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "sass": "^1.38.1",
     "web-vitals": "^1.0.1"
   },
